# proyecto-Monguarte

./: .gitignore  LICENSE  my.cnf  package-lock.json  package.json  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_register_deleted_register_deleted_by_cascade.py
base/: settings.py  urls.py  views.py
base/backups/: default-HP-2023-08-08-171856.dump
base/templates/: index.html
compra/: forms.py  models.py  urls.py  views.py
compra/migrations/: 0001_initial.py  0002_remove_detalle_compra_compra_and_more.py  0003_detalle_compra_compra.py  0004_rename_precio_unidad_detalle_compra_precio_unitario.py  0005_rename_precio_unitario_detalle_compra_precio_unidad.py  0006_detalle_compra_estado.py  0007_detalle_compra_valor_total.py  0008_alter_compra_persona_admin_and_more.py
inventario/: admin.py  forms.py  models.py  urls.py  views.py
inventario/migrations/: 0001_initial.py  0002_alter_fabricacion_producto.py  0003_alter_fabricacion_producto.py  0004_fabricacion_estado.py  0005_remove_materia_prima_stock_stock.py  0006_materia_prima_stock_delete_stock.py  0007_materia_prima_precio_unidad.py  0008_alter_materia_prima_precio_unidad.py  0009_alter_materia_prima_precio_unidad.py  0010_alter_materia_prima_precio_unidad.py  0011_remove_materia_prima_precio_unidad_and_more.py  0014_fabricacion_detalle_fabricacion.py  (+4 more)
productos/: admin.py  forms.py  models.py  urls.py  views.py
usuario/: admin.py  forms.py  models.py  urls.py  views.py
venta/: admin.py  forms.py  models.py  urls.py  views.py
(+82 files in other folders)
